--- a/rails_example/config/secrets.yml
+++ b/rails_example/config/secrets.yml
@@ -28,6 +28,7 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  pusher_host: <%= ENV['PUSHER_LITE_HOST'] %>
   org_id: <%= ENV['PUSHER_LITE_ORGANIZATION'] %>
   app_key: <%= ENV["PUSHER_LITE_APP_KEY"] %>
   secret_token: <%= ENV["PUSHER_LITE_SECRET_TOKEN"] %>
