--- a/doc/haproxy.cfg
+++ b/doc/haproxy.cfg
@@ -1,20 +1,45 @@
-defaults
-	log	global
-	mode	http
-	option	httplog
-	option	dontlognull
-	option	redispatch
-        timeout connect 5000
-        timeout client  50000
-        timeout server  50000
+global
+   log /dev/log    local0
+   log /dev/log    local1 notice
+   chroot /var/lib/haproxy
+   stats socket /run/haproxy/admin.sock mode 660 level admin
+   stats timeout 30s
+   user haproxy
+   group haproxy
+   daemon
+   maxconn 2048
+   tune.ssl.default-dh-param 2048
 
-listen ex_pusher_lite
-	bind 0.0.0.0:8080
-	mode http
-	option forwardfor
-	option http-server-close
-	balance roundrobin
-	option httpclose
-  cookie SERVERID insert indirect nocache
-	server us 127.0.0.1:4000 check cookie server1
-	server uk 127.0.0.1:4001 check cookie server2
+defaults
+   log global
+   mode http
+   option httplog
+   option dontlognull
+   option redispatch
+   option forwardfor
+   option http-server-close
+   timeout connect 5000
+   timeout client  50000
+   timeout server  50000
+
+frontend www-http
+   bind 45.55.63.35:80
+   reqadd X-Forwarded-Proto:\ http
+   default_backend www-backend
+
+frontend www-https
+   bind 45.55.63.35:443 ssl crt /etc/haproxy/certs/expusherlite.cm42.io.pem
+   reqadd X-Forwarded-Proto:\ https
+   acl letsencrypt-acl path_beg /.well-known/acme-challenge/
+   use_backend letsencrypt-backend if letsencrypt-acl
+   default_backend www-backend
+
+backend www-backend
+   redirect scheme https if !{ ssl_fc }
+   # setting session stickiness
+   cookie SERVERID insert indirect nocache
+   server us your_us_server_IP:8080 check cookie us1
+   server uk your_uk_server_IP:8080 check cookie uk1
+
+backend letsencrypt-backend
+   server letsencrypt 127.0.0.1:54321
